--- a/index.html
+++ b/index.html
@@ -104,14 +104,14 @@
         <section id="tokenomics">
             <h2>Tokenomics</h2>
             <ul>
-                <li>Total Supply: 1,000,000 Chlenix ($XYI)</li>
+                <li>Total Supply: 1,000,000,000 Chlenix ($XYI)</li>
                 <li>Symbol: XYI</li>
                 <li>Decimals: 18</li>
             </ul>
         </section>
         <section id="buy">
             <h2>How to Buy Chlenix</h2>
-            <p>Chlenix Token is available for purchase on various decentralized exchanges (DEXs) and can be traded using popular cryptocurrencies such as Ethereum (ETH).</p>
+            <p>Chlenix Token is available for purchase on various decentralized exchanges (DEXs) and can be traded using popular cryptocurrencies such as BNB (Bep20).</p>
         </section>
     </div>
     <footer>
