--- a/index.html
+++ b/index.html
@@ -120,10 +120,10 @@
     </div>
     <footer>
         <div class="social-icons">
-            <a href="https://www.tiktok.com/"><img src="tiktok.png" alt="TikTok"></a>
-            <a href="https://telegram.org/"><img src="telegram.png" alt="Telegram"></a>
-            <a href="#"><img src="x.png" alt="X"></a>
-            <a href="https://www.instagram.com/"><img src="instagram.png" alt="Instagram"></a>
+            <a href="https://www.tiktok.com/@chlenix.xyi"><img src="tiktok.png" alt="TikTok"></a>
+            <a href="https://t.me/xyichlenix"><img src="telegram.png" alt="Telegram"></a>
+            <a href="https://x.com/xyichlenix"><img src="x.png" alt="X"></a>
+            <a href="https://www.instagram.com/chlenix.xyi"><img src="instagram.png" alt="Instagram"></a>
         </div>
         <p>&copy; 2024 Chlenix Token. All rights reserved.</p>
     </footer>
