--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Chlenix Token</title>
     <link rel="icon" type="image/png" href="favicon.png">
     <style>
-        /* Ваши стили */
+        /* Общие стили */
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -18,19 +18,19 @@
             color: #000;
             padding: 20px;
             text-align: center;
-            position: relative; /* Добавлено */
+            position: relative;
         }
-        .left-image, .right-image { /* Добавлено */
+        .left-image, .right-image {
             position: absolute;
             top: 50%;
             transform: translateY(-50%);
-            width: 300px; /* Увеличено изображение в 3 раза */
+            width: 300px;
             height: auto;
         }
-        .left-image { /* Добавлено */
+        .left-image {
             left: 10px;
         }
-        .right-image { /* Добавлено */
+        .right-image {
             right: 10px;
         }
         nav {
@@ -66,7 +66,6 @@
             color: #000;
             text-align: center;
             padding: 20px;
-            /* Убрана фиксированная позиция */
             width: 100%;
         }
         .social-icons {
@@ -78,13 +77,38 @@
             height: auto;
             margin: 0 10px;
         }
+
+        /* Медиа-запрос для мобильных устройств */
+        @media screen and (max-width: 600px) {
+            .left-image, .right-image {
+                display: none; /* Скрываем изображения на маленьких экранах */
+            }
+            header {
+                padding: 10px; /* Уменьшаем отступы */
+            }
+            nav select {
+                font-size: 14px; /* Уменьшаем размер шрифта в навигационном меню */
+            }
+            .container {
+                padding: 0 10px; /* Уменьшаем внутренние отступы контейнера */
+            }
+            h2 {
+                font-size: 18px; /* Уменьшаем размер заголовков */
+            }
+            p {
+                font-size: 14px; /* Уменьшаем размер текста */
+            }
+            .social-icons img {
+                width: 20px; /* Уменьшаем размер иконок социальных сетей */
+            }
+        }
     </style>
 </head>
 <body>
     <header>
-        <img src="left-image.png" alt="Left Image" class="left-image"> <!-- Добавлено -->
+        <img src="left-image.png" alt="Left Image" class="left-image">
         <h1>Chlenix Token</h1>
-        <img src="right-image.png" alt="Right Image" class="right-image"> <!-- Добавлено -->
+        <img src="right-image.png" alt="Right Image" class="right-image">
         <nav>
             <select id="langSelector" onchange="changeLanguage()">
                 <option value="en">English</option>
