--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
             header {
                 padding: 10px; /* Изменяем отступы для маленьких экранов */
             }
+            .left-image, .right-image {
+        width: 90px; /* Увеличиваем изображения в 3 раза для мобильных устройств */
+	    }
             nav select {
                 font-size: 14px; /* Изменяем размер шрифта для маленьких экранов */
             }
