--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         header {
             background-color: #ffec80;
             color: #000;
-            padding: 5vw; /* Отступы зависят от ширины экрана */
+            padding: 20px;
             text-align: center;
             position: relative;
         }
@@ -24,87 +24,82 @@
             position: absolute;
             top: 50%;
             transform: translateY(-50%);
-            width: 15vw; /* Ширина зависит от ширины экрана */
+            width: 300px;
             height: auto;
         }
         .left-image {
-            left: 5vw; /* Отступ от левого края зависит от ширины экрана */
+            left: 10px;
         }
         .right-image {
-            right: 5vw; /* Отступ от правого края зависит от ширины экрана */
+            right: 10px;
         }
         nav {
             background-color: #fff6bf;
             text-align: center;
-            padding: 2vw 0; /* Отступы зависят от ширины экрана */
+            padding: 10px 0;
         }
         nav select {
             border: none;
             background-color: transparent;
-            font-size: 4vw; /* Размер шрифта зависит от ширины экрана */
+            font-size: 16px;
             cursor: pointer;
         }
         .container {
-            max-width: 80vw; /* Максимальная ширина контейнера зависит от ширины экрана */
-            margin: 5vh auto; /* Отступы от верхнего и нижнего края зависят от высоты экрана */
-            padding: 0 5vw; /* Внутренние отступы зависят от ширины экрана */
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 0 20px;
             background-color: #fff;
-            border-radius: 5vw; /* Радиус скругления углов зависит от ширины экрана */
+            border-radius: 10px;
         }
         section {
-            padding: 5vw 0; /* Отступы зависят от ширины экрана */
-            border-bottom: 0.5vw solid #ccc; /* Толщина границы зависит от ширины экрана */
+            padding: 20px 0;
+            border-bottom: 1px solid #ccc;
         }
         h2 {
-            font-size: 5vw; /* Размер заголовка зависит от ширины экрана */
             color: #ff7846;
         }
         p {
-            font-size: 4vw; /* Размер текста зависит от ширины экрана */
             color: #666;
         }
         footer {
             background-color: #ffec80;
             color: #000;
             text-align: center;
-            padding: 5vw;
+            padding: 20px;
             width: 100%;
         }
         .social-icons {
-            margin-top: 5vw; /* Отступ сверху зависит от ширины экрана */
+            margin-top: 20px;
             text-align: center;
         }
         .social-icons img {
-            width: 10vw; /* Размер иконок зависит от ширины экрана */
+            width: 30px;
             height: auto;
-            margin: 0 2.5vw; /* Отступы между иконками зависят от ширины экрана */
+            margin: 0 10px;
         }
 
-        /* Медиа-запросы для адаптивности на различных устройствах */
-        @media screen and (max-width: 768px) {
-            header {
-                padding: 10px; /* Изменяем отступы для маленьких экранов */
-            }
+        /* Медиа-запрос для мобильных устройств */
+        @media screen and (max-width: 600px) {
             .left-image, .right-image {
-        width: 90px; /* Увеличиваем изображения в 3 раза для мобильных устройств */
-	    }
+                display: none; /* Скрываем изображения на маленьких экранах */
+            }
+            header {
+                padding: 10px; /* Уменьшаем отступы */
+            }
             nav select {
-                font-size: 14px; /* Изменяем размер шрифта для маленьких экранов */
+                font-size: 14px; /* Уменьшаем размер шрифта в навигационном меню */
             }
             .container {
-                max-width: 90vw; /* Изменяем максимальную ширину контейнера для маленьких экранов */
-                margin: 5vh auto; /* Изменяем отступы от верхнего и нижнего края для маленьких экранов */
-                border-radius: 3vw; /* Изменяем радиус скругления углов для маленьких экранов */
+                padding: 0 10px; /* Уменьшаем внутренние отступы контейнера */
             }
             h2 {
-                font-size: 6vw; /* Изменяем размер заголовка для маленьких экранов */
+                font-size: 18px; /* Уменьшаем размер заголовков */
             }
             p {
-                font-size: 5vw; /* Изменяем размер текста для маленьких экранов */
+                font-size: 14px; /* Уменьшаем размер текста */
             }
             .social-icons img {
-                width: 8vw; /* Изменяем размер иконок для маленьких экранов */
-                margin: 0 1vw; /* Изменяем отступы между иконками для маленьких экранов */
+                width: 20px; /* Уменьшаем размер иконок социальных сетей */
             }
         }
     </style>
