--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <div class="container">
         <section id="about">
             <h2 id="aboutTitle">About Chlenix Token</h2>
-            <p id="aboutText">Chlenix Token is a decentralized digital currency based on the concept of Chlenix. It aims to provide a fun and engaging way for users to interact with the blockchain.</p>
+            <p id="aboutText">Chlenix Token is a project that brings people together around the intersection of humor and cryptocurrency. We don't aim for serious financial outcomes, but we believe in the power of community and the creativity of each participant. In the future, we plan to leverage our popularity to support various initiatives, such as creating unique NFTs, supporting art and culture, and developing innovative decentralized applications. Join us, and let's bring our ideas to life together!</p>
         </section>
         <section id="tokenomics">
             <h2 id="tokenomicsTitle">Tokenomics</h2>
@@ -153,7 +153,7 @@
             var lang = document.getElementById("langSelector").value;
             if (lang === "ru") {
                 document.getElementById("aboutTitle").innerText = "О токене Chlenix";
-                document.getElementById("aboutText").innerText = "Токен Chlenix - это децентрализованная цифровая валюта, основанная на концепции Chlenix. Он стремится предоставить пользователям увлекательный и интересный способ взаимодействия с блокчейном.";
+                document.getElementById("aboutText").innerText = "Chlenix Token - это проект, который объединяет людей вокруг идеи юмора и криптовалюты. Мы не претендуем на серьезные финансовые результаты, но верим в силу сообщества и креативность каждого его участника. В будущем мы планируем использовать нашу популярность для развития различных инициатив, таких как создание уникальных NFT, поддержка искусства и культуры, а также разработка инновационных децентрализованных приложений. Присоединяйтесь к нам и давайте вместе воплотим наши идеи в жизнь!";
                 document.getElementById("tokenomicsTitle").innerText = "Токеномика";
                 document.getElementById("totalSupply").innerText = "Общее количество: 1 000 000 000 Chlenix ($XYI)";
                 document.getElementById("symbol").innerText = "Символ: XYI";
@@ -164,7 +164,7 @@
                 document.getElementById("buyText").innerText = "Токен Chlenix доступен для покупки на различных децентрализованных биржах (DEX) в сети BNB (Bep20). Возможно токен когда - то будет торговаться на крупных биржах, таких, как Binance, Bybit, HTX, Mexc, OKX, Kucoin и другие. Адрес контракта токена: 0xA71Fc85908555B515CDCaB1a5602848515bdb3c5 сеть BNB Smart Chain (Bep20)";
             } else {
                 document.getElementById("aboutTitle").innerText = "About Chlenix Token";
-                document.getElementById("aboutText").innerText = "Chlenix Token is a decentralized digital currency based on the concept of Chlenix. It aims to provide a fun and engaging way for users to interact with the blockchain.";
+                document.getElementById("aboutText").innerText = "Chlenix Token is a project that brings people together around the intersection of humor and cryptocurrency. We don't aim for serious financial outcomes, but we believe in the power of community and the creativity of each participant. In the future, we plan to leverage our popularity to support various initiatives, such as creating unique NFTs, supporting art and culture, and developing innovative decentralized applications. Join us, and let's bring our ideas to life together!";
                 document.getElementById("tokenomicsTitle").innerText = "Tokenomics";
                 document.getElementById("totalSupply").innerText = "Total Supply: 1,000,000,000 Chlenix ($XYI)";
                 document.getElementById("symbol").innerText = "Symbol: XYI";
