--- a/index.html
+++ b/index.html
@@ -125,8 +125,9 @@
             <h2 id="tokenomicsTitle">Tokenomics</h2>
             <ul>
                 <li id="totalSupply">Total Supply: 1,000,000,000 Chlenix ($XYI)</li>
-                <li id="symbol">Symbol: XYI</li>
+                <li id="symbol">Symbol: $XYI</li>
                 <li id="decimals">Decimals: 18</li>
+		<li id="decimals1">Token contract address: 0xA71Fc85908555B515CDCaB1a5602848515bdb3c5 in the BNB Smart Chain (Bep20) network</li>
             </ul>
         </section>
         <section id="rewards">
@@ -156,23 +157,25 @@
                 document.getElementById("aboutText").innerText = "Chlenix Token - это проект, который объединяет людей вокруг идеи юмора и криптовалюты. Мы не претендуем на серьезные финансовые результаты, но верим в силу сообщества и креативность каждого его участника. В будущем мы планируем использовать нашу популярность для развития различных инициатив, таких как создание уникальных NFT, поддержка искусства и культуры, а также разработка инновационных децентрализованных приложений. Присоединяйтесь к нам и давайте вместе воплотим наши идеи в жизнь!";
                 document.getElementById("tokenomicsTitle").innerText = "Токеномика";
                 document.getElementById("totalSupply").innerText = "Общее количество: 1 000 000 000 Chlenix ($XYI)";
-                document.getElementById("symbol").innerText = "Символ: XYI";
+                document.getElementById("symbol").innerText = "Символ: $XYI";
                 document.getElementById("decimals").innerText = "Десятичные разряды: 18";
                 document.getElementById("rewardsTitle").innerText = "Каждое действие Вознаграждается";
                 document.getElementById("rewardsText").innerText = "Каждое взаимодействие с аккаунтами Chlenix вознаграждается. Подписывайтесь на наши аккаунты TikTok, Instagram, X и Telegram, делайте репосты, ставьте лайки и участвуйте в раздаче токенов. Генерируйте фото и видео контент с участием персонажа Chlenix с отметками нашего аккаунта и токена и участвуйте в супер - раздаче токенов.";
                 document.getElementById("buyTitle").innerText = "Как купить Chlenix";
                 document.getElementById("buyText").innerText = "Токен Chlenix доступен для покупки на различных децентрализованных биржах (DEX) в сети BNB (Bep20). Возможно токен когда - то будет торговаться на крупных биржах, таких, как Binance, Bybit, HTX, Mexc, OKX, Kucoin и другие. Адрес контракта токена: 0xA71Fc85908555B515CDCaB1a5602848515bdb3c5 сеть BNB Smart Chain (Bep20)";
+                document.getElementById("decimals1").innerText = "Адрес контракта токена: 0xA71Fc85908555B515CDCaB1a5602848515bdb3c5 сеть BNB Smart Chain (Bep20)";
             } else {
                 document.getElementById("aboutTitle").innerText = "About Chlenix Token";
                 document.getElementById("aboutText").innerText = "Chlenix Token is a project that brings people together around the intersection of humor and cryptocurrency. We don't aim for serious financial outcomes, but we believe in the power of community and the creativity of each participant. In the future, we plan to leverage our popularity to support various initiatives, such as creating unique NFTs, supporting art and culture, and developing innovative decentralized applications. Join us, and let's bring our ideas to life together!";
                 document.getElementById("tokenomicsTitle").innerText = "Tokenomics";
                 document.getElementById("totalSupply").innerText = "Total Supply: 1,000,000,000 Chlenix ($XYI)";
-                document.getElementById("symbol").innerText = "Symbol: XYI";
+                document.getElementById("symbol").innerText = "Symbol: $XYI";
                 document.getElementById("decimals").innerText = "Decimals: 18";
                 document.getElementById("rewardsTitle").innerText = "Rewards for Every Action";
                 document.getElementById("rewardsText").innerText = "Every interaction with Chlenix accounts is rewarded. Subscribe to our TikTok, Instagram, X, and Telegram accounts, repost, like, and participate in token giveaways. Generate photo and video content featuring the Chlenix character with tags of our account and token and participate in the super-token giveaway.";
                 document.getElementById("buyTitle").innerText = "How to Buy Chlenix";
                 document.getElementById("buyText").innerText = "Chlenix Token is available for purchase on various decentralized exchanges (DEXs) in the BNB (Bep20) network. Possibly, the token will be traded on major exchanges such as Binance, Bybit, HTX, Mexc, OKX, Kucoin, and others. Token contract address: 0xA71Fc85908555B515CDCaB1a5602848515bdb3c5 in the BNB Smart Chain (Bep20) network.";
+                document.getElementById("decimals1").innerText = "Token contract address: 0xA71Fc85908555B515CDCaB1a5602848515bdb3c5 in the BNB Smart Chain (Bep20) network";
             }
         }
     </script>
